// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal Component should match snapshot when showModal is false 1`] = `
<div
  className="modal"
>
  <div
    className="modal-content"
  >
    <div
      className="modal-header"
    >
      <h3
        className="title"
      >
        Dummy Header
      </h3>
      <button
        className="modal-close"
        onClick={[MockFunction]}
      >
        ×
      </button>
    </div>
    <div
      className="modal-body"
    />
  </div>
</div>
`;

exports[`Modal Component should match snapshot when showModal is true 1`] = `
<div
  className="modal open"
>
  <div
    className="modal-content"
  >
    <div
      className="modal-header"
    >
      <h3
        className="title"
      >
        Dummy Header
      </h3>
      <button
        className="modal-close"
        onClick={[MockFunction]}
      >
        ×
      </button>
    </div>
    <div
      className="modal-body"
    />
  </div>
</div>
`;
